push update ecommerce/task5

--- a/src/assets/style/page.css
+++ b/src/assets/style/page.css
@@ -58,7 +58,7 @@
     font-size: 20px;
   }
   
-  .next-button {
+  /* .next-button {
     padding: 10px 20px;
     font-size: 14px;
     background-color: #007bff;
@@ -70,7 +70,7 @@
   
   .next-button:hover {
     background-color: #0056b3;
-  }  
+  }   */
   
   .unavailable-text {
     font-size: 18px;
@@ -92,6 +92,14 @@
     width: 250px;
     height: auto;
     object-fit: contain;
+  }
+
+  .title-men {
+    color: #002772 
+  }
+  
+  .title-women {
+    color: #720060
   }
   
   .product-details {
@@ -121,26 +129,59 @@
   .actions {
     margin-top: 1rem;
   }
+
+.buy-button,
+.next-button {
+padding: 10px;
+  font-size: 14px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.btn-buy-men {
+  background-color: #002772;
+  margin-right: 10px;
+  color: white;
+  border: 2px solid #002772 ;
+}
+
+.btn-buy-women {
+  background-color: #720060;
+  margin-right: 10px;
+  color: white;
+  border: 2px solid #720060;
+}
+
+.btn-buy-unavailable {
+  background-color: #333;
+  color: white;
+  border: none;
+}
+
+.btn-outline-men {
+  background-color: transparent;
+  border: 2px solid #002772 ;
+  color: #002772 ;
+}
+
+.btn-outline-women {
+  background-color: transparent;
+  border: 2px solid #720060;
+  color: #720060;
+}
+
+.btn-outline-unavailable {
+  background-color: transparent;
+  border: 2px solid #999999;
+  color: #999999;
+}
   
-  .buy-button,
-  .next-button {
-    padding: 0.5rem 1.2rem;
-    font-weight: bold;
-    border: 2px solid var(--blue);
-    margin-right: 1rem;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .buy-button {
-    background-color: var(--blue);
+  /* .btn-unavailable {
+    background-color: #333;
     color: white;
-  }
-  
-  .next-button {
-    background-color: white;
-    color: var(--blue);
-  }
+  } */
   
   .loader {
     border: 6px solid var(--gray);
